# intersection_task

./: CMakeLists.txt  README.md
include/: segment3d.hpp  utils.hpp  vector3d.hpp
src/: segment3d.cpp  utils.cpp  vector3d.cpp
test/: CMakeLists.txt  intersection.cc  vector_basics.cc
